# live-lang

./: .gitignore  Cargo.toml  README.md
example/: hello_window.rs  hydra.js
example/glsl/: fragment.frag  pink.frag
example/spv/: fragment.spv
examples/: README.md  render_hydra.rs
examples/glsl/: screen.vert
examples/hydra/: color.js  sources.js  sources_simple.js
examples/render/: mod.rs  window.rs
src/: lib.rs  main.rs
src/backend/: hydra_effects.rs  hydra_sources.rs  mod.rs  spirv_context.rs  spirv_glsl.rs  spirv_helpers.rs  spirv_visitor.rs
src/frontend/: hydra_ecma.rs  hydra_js.rs  mod.rs
src/ir/: builder.rs  mod.rs  node.rs
