[package]
name = "live-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = "0.11.1"
swc_common = { version = "14.0.4", features = ["tty-emitter"] }
swc_ecma_ast = "15.0.0"
swc_ecma_parser = "24.0.3"
rspirv = "0.12.0+sdk-1.3.268.0"
bytemuck = "1.24.0"
wgpu = { version = "25", features = ["glsl", "spirv"] }
spirv-cross2 = "0.4.6"

[dev-dependencies]
winit = "0.30"
wgpu = "25"
pollster = "0.3"
env_logger = "0.11"

[[example]]
name = "hello_window"
path = "example/hello_window.rs"
