[package]
name = "live-lang"
version = "0.0.1"
edition = "2024"
authors = [
    "Andrey Shinkarev <laktoosivaba>"
]
license = "MIT"

[dependencies]
swc_common = { version = "14.0.4", features = ["tty-emitter"] }
swc_ecma_ast = "15.0.0"
swc_ecma_parser = "24.0.3"
rspirv = "0.12.0+sdk-1.3.268.0"
spirv-cross2 = "0.4.6"
bytemuck = { version = "1.15", features = ["derive"] }

[dev-dependencies]
winit = "0.30"
wgpu = { version = "25", features = ["glsl", "spirv"] }
pollster = "0.3"
env_logger = "0.11"

[[example]]
name = "render_hydra"
path = "examples/render_hydra.rs"
